// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.active - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-active emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.avatar boolean - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element emotion-0"
>
  <span
    class="ant-skeleton-avatar ant-skeleton-avatar-circle"
  />
</div>
`;

exports[`Render properties.avatar object circle - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element emotion-0"
>
  <span
    class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
  />
</div>
`;

exports[`Render properties.avatar object square - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element emotion-0"
>
  <span
    class="ant-skeleton-avatar ant-skeleton-avatar-sm ant-skeleton-avatar-square"
  />
</div>
`;

exports[`Render properties.block block true - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element ant-skeleton-block emotion-0"
>
  <span
    class="ant-skeleton-button emotion-0"
  />
</div>
`;

exports[`Render properties.button object circle - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element emotion-0"
>
  <span
    class="ant-skeleton-button ant-skeleton-button-lg ant-skeleton-button-circle emotion-0"
  />
</div>
`;

exports[`Render properties.button object round - value[0] 1`] = `
<div
  class="ant-skeleton ant-skeleton-element emotion-0"
>
  <span
    class="ant-skeleton-button ant-skeleton-button-sm ant-skeleton-button-round emotion-0"
  />
</div>
`;

exports[`Render properties.paragraph boolean - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
    />
  </div>
</div>
`;

exports[`Render properties.paragraph object width all - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 300px;"
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.paragraph object width array - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li
        style="width: 700px;"
      />
      <li
        style="width: 250px;"
      />
      <li
        style="width: 500px;"
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.title boolean - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.title object - value[0] 1`] = `
<div
  class="ant-skeleton emotion-0"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 250px;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.active 1`] = `true`;

exports[`Test Schema properties.active 2`] = `null`;

exports[`Test Schema properties.avatar boolean 1`] = `true`;

exports[`Test Schema properties.avatar boolean 2`] = `null`;

exports[`Test Schema properties.avatar object circle 1`] = `true`;

exports[`Test Schema properties.avatar object circle 2`] = `null`;

exports[`Test Schema properties.avatar object square 1`] = `true`;

exports[`Test Schema properties.avatar object square 2`] = `null`;

exports[`Test Schema properties.block block true 1`] = `true`;

exports[`Test Schema properties.block block true 2`] = `null`;

exports[`Test Schema properties.button object circle 1`] = `true`;

exports[`Test Schema properties.button object circle 2`] = `null`;

exports[`Test Schema properties.button object round 1`] = `true`;

exports[`Test Schema properties.button object round 2`] = `null`;

exports[`Test Schema properties.paragraph boolean 1`] = `true`;

exports[`Test Schema properties.paragraph boolean 2`] = `null`;

exports[`Test Schema properties.paragraph object width all 1`] = `true`;

exports[`Test Schema properties.paragraph object width all 2`] = `null`;

exports[`Test Schema properties.paragraph object width array 1`] = `true`;

exports[`Test Schema properties.paragraph object width array 2`] = `null`;

exports[`Test Schema properties.title boolean 1`] = `true`;

exports[`Test Schema properties.title boolean 2`] = `null`;

exports[`Test Schema properties.title object 1`] = `true`;

exports[`Test Schema properties.title object 2`] = `null`;
